--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="about-col-2">
 					<h1 class="sub-title">About me</h1>
-					<p class="about-p">Highly motivated JuniorFrontend Developer with expertise in HTML, CSS and JavaScriptalso familiar with React. Passionate about creating user-friendly interfaces that enhance the user experience. Collaborative team player, quick learner, and adaptable to emerging technologies. Committed to continuous learning, creative problem-solving, and delivering high-quality code on time. Excellent communication skills and a track record of success. Ready to contribute to innovative web application development as part of a dynamic team.</p>
+					<p class="about-p">Highly motivated Junior Frontend Developer with expertise in HTML, CSS and JavaScript also familiar with React. Passionate about creating user-friendly interfaces that enhance the user experience. Collaborative team player, quick learner, and adaptable to emerging technologies. Committed to continuous learning, creative problem-solving, and delivering high-quality code on time. Excellent communication skills and a track record of success. Ready to contribute to innovative web application development as part of a dynamic team.</p>
 
 					<div class="tab-titles">
 						<p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
